<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:orientation="vertical" >

    <include layout="@layout/setting_head" />

    <TextView
        android:id="@+id/head_title"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_marginLeft="10dp"
        android:layout_marginRight="10dp"
        android:layout_marginTop="10dp"
        android:gravity="center_vertical"
        android:text="@string/feedback_title"
        android:textSize="@dimen/text_size_normal" />

    <ScrollView
        android:layout_width="match_parent"
        android:layout_height="match_parent"
         >

        <LinearLayout
            android:id="@+id/feedback_suggest"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:gravity="center_horizontal"
            android:orientation="vertical"
            android:padding="5dip" >

            <EditText
                android:id="@+id/suggest"
               
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_margin="10dp"
                android:background="@drawable/chat_notice_bg2"
                android:gravity="top"
                android:hint="@string/feedback_content_hint"
                android:padding="5dip"
                android:textColor="#444444"
                android:textColorHint="#becfc5"
                android:textSize="@dimen/text_size_normal" />

            <Button
                android:id="@+id/send"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_margin="10dp"
                android:background="@drawable/save_bg_selector"
                android:gravity="center"
                android:padding="5dip"
                android:text="@string/feedback_send"
                android:textColor="@color/title_text_selector"
                android:textSize="@dimen/text_size_normal" />

        </LinearLayout>
    </ScrollView>

</LinearLayout>