<?xml version="1.0" encoding="utf-8"?>


<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    android:id="@+id/mainBackView"
    style="@android:style/ButtonBar"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:background="@color/background"
    android:gravity="center_horizontal"
    android:orientation="vertical"
    android:padding="20dip" >

    <ImageView
        android:id="@+id/user_logo"
        android:layout_width="180dp"
        android:layout_height="180dp"
        android:layout_marginTop="20dp"
        android:contentDescription="@null"
        android:scaleType="fitCenter"
        android:src="@drawable/crm_256" />

    <TextView
        android:id="@+id/titleText"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_marginTop="10dp"
        android:gravity="center_horizontal"
        android:textAppearance="?android:attr/textAppearanceLarge"
        android:textSize="@dimen/text_size_huge"
        android:textStyle="bold|italic"
        android:typeface="normal" />

    <TableLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_marginLeft="20dp"
        android:layout_marginRight="20dp"
        android:layout_marginTop="20dp"
        android:orientation="vertical" >

        <TableRow
            android:id="@+id/table_item"
            android:layout_width="match_parent"
            android:layout_height="45dp"
            android:background="@drawable/round_corner_bg" >

            <ImageView
                android:layout_width="28dp"
                android:layout_height="28dp"
                android:layout_gravity="center_vertical"
                android:layout_marginLeft="8.0dp"
                android:contentDescription="@null"
                android:paddingBottom="2dip"
                android:paddingTop="2dip"
                android:src="@drawable/login_url" />

            <EditText
                android:id="@+id/login_url"
                android:layout_width="match_parent"
                android:layout_height="35dp"
                android:layout_marginLeft="5dip"
                android:layout_marginRight="10.0dp"
                android:layout_weight="1"
                android:background="@drawable/bg_title_bar_btn"
                android:hint="@string/hint_login_url"
                android:inputType="text"
                android:textSize="@dimen/text_size_normal" />

            <ImageButton
                android:id="@+id/login_choose"
                android:layout_width="match_parent"
                android:layout_height="match_parent"
                android:layout_gravity="center_vertical"
                android:layout_marginBottom="1dip"
                android:layout_marginRight="1dip"
                android:layout_marginTop="1dip"
                android:background="@null"
                android:contentDescription="@null"
                android:padding="5dip"
                android:scaleType="centerInside"
                android:src="@drawable/login_btn_bg_nor" />
        </TableRow>
        
        <TableRow
            android:id="@+id/table_item1"
            android:layout_width="match_parent"
            android:layout_height="45dip"
            android:layout_marginTop="10.0dp"
            android:background="@drawable/round_corner_bg" >

            <ImageView
                android:id="@+id/login_userphoto"
                android:layout_width="28dp"
                android:layout_height="28dp"
                android:layout_gravity="center_vertical"
                android:layout_marginLeft="8.0dp"
                android:contentDescription="@null"
                android:paddingBottom="2dip"
                android:paddingTop="2dip"
                android:src="@drawable/login_userphoto" />

            <EditText
                android:id="@+id/login_username"
                android:layout_width="match_parent"
                android:layout_height="35dp"
                android:layout_marginLeft="5dip"
                android:layout_marginRight="10.0dp"
                android:layout_weight="1"
                android:background="@drawable/bg_title_bar_btn"
                android:hint="@string/hint_login_username"
                android:inputType="text"
                android:textSize="@dimen/text_size_normal" />

            
        </TableRow>

        <TableRow
            android:layout_width="match_parent"
            android:layout_height="45dip"
            android:layout_gravity="center_vertical"
            android:layout_marginTop="10.0dp"
            android:background="@drawable/round_corner_bg" >

            <ImageView
                android:id="@+id/login_passwordphoto"
                android:layout_width="28dp"
                android:layout_height="28dp"
                android:layout_gravity="center_vertical"
                android:layout_marginLeft="8.0dp"
                android:contentDescription="@null"
                android:paddingBottom="2dip"
                android:paddingTop="2dip"
                android:src="@drawable/login_password" />

            <EditText
                android:id="@+id/login_password"
                android:layout_width="match_parent"
                android:layout_height="35dp"
                android:layout_marginLeft="5dip"
                android:layout_marginRight="10.0dp"
                android:layout_weight="1"
                android:background="@null"
                android:hint="@string/hint_login_password"
                android:inputType="textPassword"
                android:maxLength="30"
                android:textSize="@dimen/text_size_normal" />
        </TableRow>
    </TableLayout>

    <RelativeLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_marginTop="10dip"
        android:gravity="center"
        android:padding="0dp" >

        <Button
            android:id="@+id/btn_login"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            
            android:background="@drawable/bg_title_bar_btn"
            android:text="@string/login"
            android:textColor="#000000"
            android:textSize="@dimen/text_size_normal" />

        
    </RelativeLayout>

    <TextView
        android:layout_width="wrap_content"
        android:layout_height="match_parent"
        android:layout_gravity="bottom|right"
       
        android:gravity="bottom"
        android:text="@string/login_bottom"
        android:textColor="#000000"
        android:textSize="@dimen/text_size_micro"
        />

</LinearLayout>
